--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "ModelIt K12 Educational Platform",
   "main": "index.js",
-  "homepage": "https://YOUR-GITHUB-USERNAME.github.io/modelit-website",
+  "homepage": "https://Charlesmartinedd.github.io/modelitk12",
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
     "build:dev": "webpack --config webpack.config.js --mode development",
